Ajuste de Código

--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simulador de Pedais de Guitarra</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nova+Square&display=swap">
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.min.js"></script> </head>
+    <link rel="stylesheet" href="../styles.css">
+    </head>
 <body>
     <header>
         <img src="img/Captura de tela 2024-10-09 234755.png" alt="Logo" class="logo">
@@ -109,8 +109,7 @@
             </ul>
         </nav>
     </footer>
-
-    
-    <script src="script.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.7.77/Tone.min.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
